# research-rag

./: README.md  pyproject.toml
docker/: Dockerfile  entrypoint.sh
src/: client.py  data.py  main.py
