[project]
name = "research-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Alok Baikadi",email = "alok.baikadi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "poetry (>=2.1.1,<3.0.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "pypdf (>=5.3.1,<6.0.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "langchain-text-splitters (>=0.3.6,<0.4.0)",
    "langgraph (>=0.3.5,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pylint = "^3.3.5"

[tool.poetry]
package-mode = false
